Bug 123550 - Paragraph Option: Orphan Control or Widow control should be tri-state
Summary: Paragraph Option: Orphan Control or Widow control should be tri-state
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-02-18 19:36 UTC by Adalbert Hanßen
Modified: 2019-04-09 08:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
state of the dialogue in Version: 6.3.0.0.alpha0+: minus signs on orphans and widows (60.50 KB, image/png)
2019-02-19 07:51 UTC, Adalbert Hanßen
Details
state of the dialogue in Version 6.3.0.0.0 alpha+ after clicking on 'Do not split paragraph'. (60.23 KB, image/png)
2019-02-19 07:55 UTC, Adalbert Hanßen
Details
version 6.1.4.2 with German locale: half checked state (59.00 KB, image/png)
2019-02-19 08:02 UTC, Adalbert Hanßen
Details
version 6.1.4.2. with German locale: 'Do not split paragraph' (58.51 KB, image/png)
2019-02-19 08:05 UTC, Adalbert Hanßen
Details
version 1.6.4.2. with German locales: 'Do not split paragraph' greyed out, orphan and widow control active (58.85 KB, image/png)
2019-02-19 08:07 UTC, Adalbert Hanßen
Details
A file containing the bug and screenshots of every single step to reporoduce it. (344.57 KB, text/odt)
2019-03-22 20:53 UTC, Adalbert Hanßen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adalbert Hanßen 2019-02-18 19:36:19 UTC
Description:
This bug report pertains to Version: 6.1.4.2
Build-ID: 9d0f32d1f0b509096fd65e0d4bec26ddd1938fd3
CPU-Threads: 4; BS: Linux 4.4; UI-Render: Standard; VCL: gtk2; 
Gebietsschema: de-DE (de_DE.UTF-8); Calc: group threaded and probably to many others.

I was surprised that a headline in a document was split from its associated content in an existing document despite the check-mark 'Keep with next paragraph' was set for it. (The headline was immediately followed by a table). This definitely is an error in version: 6.1.4.2 which could be circumvented by simultaneously setting the features 'Do not split paragraph' and 'Keep with next paragraph'.

Initially 'Do not split paragraph' was greyed out.

I found out that it becomes accessible after both orphan control and widow control are switched off (work around). 

In version 6.1.4.2 the check-marks for orphan and for widow control can sometimes (but not always) be checked (i.e. with hook) or half checked (i.e. blue, but no hook) or unchecked (i.e. white).

Prevent splitting all-together and widow/orphan control are somewhat contradictory, therefore this feature seems to have been touched in the daily build version 6.3.0.0.alpha0+
Build ID: aa31976c2e4399a86bc6f70f140972d9ccef6fc0
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-02-12_16:47:45
Locale: de-DE (de_DE.UTF-8); UI-Language: en-US
Calc: threaded 

In this daily build version, checking 'Do not split paragraph' in some instances simultaneously removed the check-marks for orphan/widow control (which makes sense). But another error has slipped in in that version: I can not influence the orphan/widow control parameters any more in it, even if 'Do not split paragraph' is not checked. The check marks become blue with a minus sign and I can't access the number of lines for  widows and for orphans.

Later I found that in other cases, clicking on 'Do not split paragraph' does not always operate on widow and orphan control, sometimes the behaviour looks like in version 6.1.4.2.

Steps to Reproduce:
1. create at least two paragraphs which are to be kept together and with two lines widow control and two lines orphan control.

2. try to change the first one to 'Do not split paragraph'.

3. remove the check marks for orphan and for widow control.

4. check 'Do not split paragraph' 

5. remove 'Do not split paragraph' 

Actual Results:
2. 'Do not split paragraph' is greyed out.
3. they are removed and 'Do not split paragraph' becomes accessible.
4. the check mark is set. Orphan and widow control become greyed out.
5. Orphan and widow control become accessible without check marks set for them.

Expected Results:
2. It should be accessible, simultaneously removing the check marks for orphan and for widow control.
5. Accessibility is ok. I would have expected that widow and orphan control were re-established as they were before.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
There might be a glitch in the daily build version: trying this on some other paragraphs, the behaviour looked similar to the one found in version 6.1.4.2, i.e. 'Do not split paragraph' inaccessible as long as either orphan control or widow control is set and no simultaneous treatment of both of them happens then.

But I am sure to have seen the half checked version just with blue buttons without check-marks. I'll try to attach screenshots as comments later.

Carefully looking at screenshots taken with the simultaneous action on the daily build  6.3.0.0.alpha0+, I found out that orphan control and widow control with them had '0 lines' parameters. Possibly this has some influence on that behaviour.
Comment 1 Adalbert Hanßen 2019-02-19 07:51:38 UTC
Created attachment 149400 [details]
state of the dialogue in Version: 6.3.0.0.alpha0+: minus signs on orphans and widows

In this case it is possible to check 'Do not split paragraph' simultaneously unchecking the lower two options.
Comment 2 Adalbert Hanßen 2019-02-19 07:55:18 UTC
Created attachment 149401 [details]
state of the dialogue in Version 6.3.0.0.0 alpha+ after clicking on 'Do not split paragraph'.

Observe that the number of lines for orphan/widow control is zero (I don't know how I got there, possibly a setting from working on the file with an earlier version of LO Writer).
Comment 3 Adalbert Hanßen 2019-02-19 08:02:17 UTC
Created attachment 149402 [details]
version 6.1.4.2 with German locale: half checked state

observe: There are no check-marks on orphan and widow control.
Comment 4 Adalbert Hanßen 2019-02-19 08:05:13 UTC
Created attachment 149403 [details]
version 6.1.4.2. with German locale: 'Do not split paragraph'

In this case the lower check boxes for orphan and widow control are greyed out. The previous state of the respective control values are still visible.
Comment 5 Adalbert Hanßen 2019-02-19 08:07:24 UTC
Created attachment 149404 [details]
version 1.6.4.2. with German locales: 'Do not split paragraph' greyed out, orphan and widow control active
Comment 6 Xisco Faulí 2019-03-22 10:37:59 UTC
Hello Adalbert Hanßen,
Could you please attach a document to reproduce the issue?
I've been trying to reproduce it from scratch but the behaviour is correct.

Version: 6.3.0.0.alpha0+
Build ID: f8ca6e0a59bff51fcb09af4fa6d9cd458b32f223
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded


I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
Comment 7 Adalbert Hanßen 2019-03-22 20:53:41 UTC
Created attachment 150205 [details]
A file containing the bug and screenshots of every single step to reporoduce it.
Comment 8 Xisco Faulí 2019-03-23 11:56:34 UTC
Steps to reproduce:
1. Open attached document
2. Select paragraphs 1 and 2 ( numbering list )
3. Format - paragraph
4. Text flow tab
5. Click on Orphan Control or Widow control

-> Checkboxes are not tri-state anymore

Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=eb1d6b16e787a87c3d918135ca98c5694d352557

author	Caolán McNamara <caolanm@redhat.com>	2018-06-13 21:26:35 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-06-14 13:22:28 +0200
commit eb1d6b16e787a87c3d918135ca98c5694d352557 (patch)
tree bfcf9fe1a699e8b934b8ccde234ddaa72669b409
parent 1f91ebb586356aa77ecced15cd5e049f1ebca70c (diff)
weld SvxExtParagraphTabPage
Comment 9 Xisco Faulí 2019-03-23 12:14:07 UTC
@Caolán, later on, the checkboxes became unclickable in

https://cgit.freedesktop.org/libreoffice/core/commit/?id=6d184e2e23b319128f94649f4e15c2f7bcbffca9

author	Caolán McNamara <caolanm@redhat.com>	2018-09-15 15:42:18 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-09-18 18:12:10 +0200
commit 6d184e2e23b319128f94649f4e15c2f7bcbffca9 (patch)
tree 23541a6cccacb3a315196ed89c39a7e4a577cc9b
parent 03cecc2985c10ecfb2efab28f5b03e451e82c777 (diff)
weld SwParaDlg
Comment 10 Commit Notification 2019-03-25 21:17:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/0b3419f1ab28941d7ab8a38b2ceedbb5e6dfaa00%5E%21

Resolves: tdf#123550 allow returning to TRISTATE_INDET

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2019-03-25 21:24:22 UTC
Fixed in master,  backports to 6-2 in gerrit
Comment 12 Xisco Faulí 2019-03-27 15:27:56 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 705558aa455403cd006993f95b5b13981fdb3483
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 13 Commit Notification 2019-04-09 08:40:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/99ec13e699ff2788db7c8eda7d9c41c1faa3d94d%5E%21

Resolves: tdf#123550 allow returning to TRISTATE_INDET

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.