Resolves: tdf#123550 allow returning to TRISTATE_INDET

Change-Id: I3e4b18c0b3217e010c80fbddccebd547ee29253a